2003-10-15  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-meeting-list-view.c: adapted to new addressbook API.

	* gui/e-meeting-store.c: adapted to new addressbook API.
	(find_zone): fixed usage of icalcomponent where an icalproperty
	is expected.
	(refresh_busy_periods): fixed call to cal_client_get_free_busy().

	* gui/e-meeting-time-sel.c (e_meeting_time_selector_construct):
	added missing variable.
	
2003-10-15  Jeffrey Stedfast  <fejj@ximian.com>

	* gui/dialogs/meeting-page.c: #include <gal/e-table/e-table.h>

2003-10-15  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-meeting-list-view.c (start_addressbook_server):
	updated to new addressbook API.
	(book_open_cb): removed unneeded function, since we load
	the local addressbook synchronously.

2003-10-15  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/Makefile.am: added missing header directories.

	* pcs/cal-factory.h: include <libical/ical.h>, not <ical.h>.

	* gui/dialogs/meeting-page.c: added missing headers.
	(meeting_page_construct): free 'backend_address' as returned
	by cal_client_get_cal_address(). Removed code to create the
	meeting model's ETable not removed with the merge.

	* gui/e-meeting-list-view.c: updated addressbook headers.

	* gui/gnome-cal.h: added missing ',' in the GnomeCalendarViewType
	enum.
	
2003-10-14  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-day-view.c (e_day_view_update_query): dont set status
	messages here, already set in e_cal_view_update_query.
	(update_query): removed this function.
	(e_day_view_recalc_day_starts): call e_day_view_update_query,
	not update_query.

	* gui/e-week-view.c (e_week_view_update_query): dont set status
	messages here, already set in e_cal_view_update_query.

	* gui/gnome-cal.c (adjust_query_for_view): new function to adjust
	the query for the visible time range on a given view.
	(gnome_calendar_set_query): call adjust_query_for_view for each
	one of the views.

2003-10-14  Rodrigo Moya <rodrigo@ximian.com>
